# libstdev

./: CMakeLists.txt  NOTICE
examples/: CMakeLists.txt  simple.c
include/stdev/: stdev.h
src/: naive.c  naive.h  stdev.c  welford.c  welford.h
